# UCL-Dissertation

./: .gitignore  README.md  Weak_in_the_NEES.txt  cursor_1_understanding_cnees_and_cnis.md  cursor_explain_the_2d_factor_graph_traj.md
COMP2049-SLAM/Coursework1/Libraries/+g2o/+stuff/: normalize_thetas.m
COMP2049-SLAM/Coursework2/FilesForSubmission/: Car.yaml  Indoor.yaml  ReadMe.md  Simons.txt  Track.yaml  car_results.txt  indoor_results.txt  track_results.txt
COMP2049-SLAM/Coursework2/FilesForSubmission/Scripts/: ExtractFrames.py  FrameExtractionColmap.py  colmap_to_TUM.py  colmap_to_kitti_calib.py  colmap_to_orbslam_calib.py  color_changer.py  intrinsic.py  movie_maker.py  timestamps.py  undistort_images.py
CPP-Working-Project/: 1D_example.cpp  1D_plotter.py  2D_example.cpp  2D_factor_graph_trajectory.cpp  2D_factor_graph_trajectory.h  2D_plotter.py  2d_trajectory_estimate.csv  BO_Parameters.yaml  CMakeLists.txt  bayesopt_example.cpp  main.cpp  plot_chi2.py  plot_trajectory.py  scenario_linear.yaml  scenario_nonlinear.yaml  single_run.cpp
CPP-Working-Project/1D/: 1D_chi2_results.csv  1D_factor_graph_trajectory.cpp  1D_factor_graph_trajectory.h  1D_main.cpp  1D_single_run.cpp  1d_trajectory_estimate.csv
CPP-Working-Project/2D/: 2D_bayesopt_NEES.cpp  2D_bayesopt_best.txt  2D_bayesopt_from_csv.cpp  2D_bayesopt_from_csv_parallel.cpp  2D_bayesopt_from_csv_parallel_CNEES.cpp  2D_bayesopt_trials.csv  2D_chi2_results.csv  2D_consistency_metric.txt  2D_csv_loader.h  2D_factor_graph_trajectory.cpp  2D_factor_graph_trajectory.h  2D_generate_noisy_data.cpp  2D_main.cpp  2D_main_from_csv.cpp  2D_noisy_measurements.csv  2D_noisy_states.csv  2D_single_run.cpp  2D_single_run_mc.cpp  2D_trajectory_estimate.csv  2D_trajectory_estimates_all.csv  2D_validate_filter.cpp  inspecthd5.py  plot_bayesopt_trials.py  plot_nees_validation.py  plot_single_run_mc.py  test_error_checking.cpp  test_factor_graph_q.cpp  test_q_matrix.cpp  visualize_trajectories.py
CPP-Working-Project/2D-Tracking/: 2D_h5_loader.h  BO_Tracking_CNEES.cpp  BO_Tracking_Test.cpp  BO_Tracking_Test_Nonlinear.cpp  BO_Tracking_Test_linear.cpp  CMakeLists_GPU.txt  CrossSection_Tracking_Nonlinear.cpp  Evaluate_MSE_Points_Linear.cpp  Evaluate_MSE_Points_Nonlinear.cpp  GridSearch_Tracking_Linear_MSE.cpp  GridSearch_Tracking_Nonlinear.cpp  GridSearch_Tracking_Nonlinear_MSE.cpp  GridSearch_Tracking_linear.cpp  README_demo.md  Validate_QR.cpp  collect_nis_linear.cpp  collect_nis_nonlinear.cpp  convergence_test_linear.cpp  convergence_test_nonlinear.cpp  debug_optimal_parameters.cpp  debug_tracking.py  demo_linear_tracking.cpp  demo_nonlinear_pure_measurement.cpp  demo_nonlinear_tracking.cpp  demo_tuned_parameters.cpp  fg_class_tracking.cpp  fg_class_tracking.h  nonlinear_sanity_checks.cpp  plot_bayesopt_trials.py  plot_trajectory_comparison_simple.py  plot_tuned_demo.py  run_nonlinear_bo_5x.sh  test_q_matrix.cpp  tracking_gen_data.cpp  tracking_gen_data_linear.cpp  tracking_gen_data_nonlinear.cpp  zero_noise_config.yaml
CPP-Working-Project/2D-Tracking/PlottingScripts/: compare_linear_vs_nonlinear.py  plot_bayesopt_trials_linear.py  plot_bayesopt_trials_nonlinear.py  plot_convergence_test.py  plot_cross_sections_nonlinear.py  plot_gridsearch_trials_linear.py  plot_gridsearch_trials_linear_mse.py  plot_gridsearch_trials_nonlinear.py  plot_gridsearch_trials_nonlinear_mse.py  plot_ideal_vs_estimated.py  plot_linear_demo.py  plot_mega_linear.py  plot_nees_analysis.py  plot_nis_analysis.py  plot_nis_linear.py  plot_nis_nonlinear.py  plot_nonlinear_demo.py  plot_nonlinear_demo_measurment_only.py  plot_tuned_demo.py  visualize_datagen_trajectories_linear.py  visualize_datagen_trajectories_nonlinear.py
CPP-Working-Project/2D-Tracking/Saved_Data/: 2D_bayesopt_best.txt  2D_bayesopt_nonlinear_best.txt  2D_bayesopt_nonlinear_best_run1.txt  2D_bayesopt_nonlinear_best_run2.txt  2D_bayesopt_nonlinear_best_run3.txt  2D_bayesopt_nonlinear_summary.csv  2D_bayesopt_nonlinear_trials.h5  2D_bayesopt_nonlinear_trials_run1.h5  2D_bayesopt_nonlinear_trials_run2.h5  2D_bayesopt_nonlinear_trials_run3.h5  2D_bayesopt_trials.h5  2D_bayesopt_trials_const.h5  2D_bayesopt_trials_varied.h5  2D_cnees_validation_new_data.h5  2D_cross_sections_nonlinear_ni3.h5  2D_cross_sections_nonlinear_nis3.h5  2D_cross_sections_nonlinear_nis4.h5  2D_gridsearch_best_linear.txt  2D_gridsearch_best_linear_nis3_linear.txt  2D_gridsearch_best_nonlinear.txt  2D_gridsearch_nonlinear_trials.h5  2D_gridsearch_nonlinear_trials_mse.h5  2D_gridsearch_nonlinear_trials_nis3.h5  2D_gridsearch_nonlinear_trials_nis4.h5  2D_gridsearch_trials.h5  2D_gridsearch_trials_nis3_linear.h5  2D_gridsearch_trials_nis4.h5  2D_linear_mse_point_evals.csv  2D_linear_mse_point_evals.h5  2D_mse_point_evals.csv  2D_mse_point_evals.h5  2D_nees_validation_new_data.h5  2D_nees_validation_results.h5  2D_nis3_validation_new_data.h5  2D_nis3_validation_same_data.h5  2D_nis3_validation_seed_11111.h5  2D_nis3_validation_seed_12345.h5  2D_nis3_validation_seed_55555.h5  2D_nis3_validation_seed_99999.h5  2D_nis4_validation_new_data.h5  (+22 more)
CPP-Working-Project/2D-Tracking/Testing/: generate_trajectory_comparison_data.cpp  test_extreme_parameter_validation.cpp  test_system_matrices.cpp  test_tuned_parameters_performance.cpp  test_zero_noise_validation_v2.cpp
CPP-Working-Project/2D-Tracking/logs/: tmp_scenario_run1.yaml  tmp_scenario_run2.yaml  tmp_scenario_run3.yaml  tmp_scenario_run4.yaml  tmp_scenario_run5.yaml
CPP-Working-Project/H5_Files/: 2D_bayesopt_best.txt  2D_bayesopt_trials.h5  2D_chi2_results.h5  2D_nees_validation_results.h5  2D_noisy_measurements.h5  2D_noisy_states.h5  2D_trajectory_estimate.h5
Factor_Graph_Example/+pose_graph_experiments/: runGPSExample.m  testGPSConsistencyMeasurement.m
Working-Project/Libraries/+g2o/+stuff/: normalize_theta.m
bayesopt/: CMakeCache.txt  Doxyfile  Makefile  cmake_install.cmake
bayesopt/examples/: Makefile  cmake_install.cmake
bayesopt/nlopt2/: Makefile  cmake_install.cmake
examples/tutorial_slam2d/: CMakeLists.txt
(+10 files in other folders)
